tests/passes/well-formed/ref-type-mismatch.expect
---STDERR---
Error: tests/passes/well-formed/ref-type-mismatch.futil
33 |      invoke f[m = k1]()();
   |      ^^^^^^^^^^^^^^^^^^^^^ Malformed Control: Unexpected type for ref cell. Expected `std_reg(32)`, received `std_reg(16)`
